# gateio-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: error.rs  lib.rs  model.rs  util.rs
src/spot/: account.rs  market.rs  mod.rs
src/wallet/: mod.rs
src/withdrawal/: mod.rs
tests/: spot.rs  util.rs  wallet.rs
