[package]
name = "gateio"
version = "0.1.0"
license = "MIT"
authors = ["Christoph Otter <chipshort@tutanota.com>"]
edition = "2018"

[lib]
name = "gateio"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
thiserror = "1.0.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_with = "1.0.0"
hex = { version = "0.4.0", features = ["serde"] }
hmac = "0.11.0"
sha2 = "0.9.0"
urldecode = "0.1.0"
typed-builder = "0.9.0"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["rt", "macros", "rt-multi-thread"] }
tokio-compat-02 = "0.2.0"